--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                             <i class="uil uil-brackets-curly skills__icon"></i>
 
                             <div>
-                                <h1 class="skills__title">Frontend developer</h1>
+                                <h1 class="skills__title">Frontend</h1>
                                 <span class="skills__subtitle">Latihan Saya</span>
                             </div>
 
