--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">Giru</a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
@@ -50,7 +49,7 @@
                     </li>
                     <li class="nav__item">
                         <a href="#portfolio" class="nav__link">
-                            <i class="uil uil-scenery nav__icon"></i> Portfolio
+                            <i class="uil uil-scenery nav__icon"></i> Portofolio
                         </a>
                     </li>
                     <li class="nav__item">
@@ -145,7 +144,7 @@
                     </p>
 
                     <div class="about__buttons">
-                        <a download="" href="" class="button button--flex">
+                        <a href="https://drive.google.com/file/d/17kArDlJZqN15euJkvAY7wWlBigSOSaZm/view?usp=sharing" class="button button--flex">
                             Download CV<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -382,8 +381,8 @@
 
         <!--==================== PORTFOLIO ====================-->
         <section class="portfolio section" id="portfolio">
-            <h2 class="section__title">Portfolio</h2>
-            <span class="section__subtitle">Most recent work</span>
+            <h2 class="section__title">Portofolio</h2>
+            <span class="section__subtitle">Project Saya</span>
 
             <div class="portfolio__container container swiper mySwiper">
                 <div class="swiper-wrapper">
