modified:   index.html

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                     <span class="skills__number">50%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__js"></span>
+                                    <span class="skills__percentage skills__fotografi"></span>
                                 </div>
                             </div>
 
