--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="icon" href="https://avatars.githubusercontent.com/u/115857748?v=4">
+    <link rel="icon" href="https://avatars.githubusercontent.com/u/115857748?s=400&u=5debd4443bfe08ec5484eca2ccfe387d445805fd&v=4">
 
     <title>Portofolio | Gilang Tri Kurniawan</title>
 </head>
