modified:   assets/css/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                             </div>
                         </div>
 
-                       <!--==================== PENDIDIKAN 2====================-->
+                       <!--==================== PENDIDIKAN 3====================-->
                        <div class="qualification__data">
                         <div></div>
 
@@ -325,7 +325,7 @@
                         </div>
                     </div>
 
-                         <!--==================== PENDIDIKAN 1====================-->
+                         <!--==================== PENDIDIKAN 4====================-->
                          <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">SDN Pasarrebo</h3>
@@ -358,7 +358,7 @@
                             </div>
                         </div>
 
-                        <!--==================== PENDIDIKAN 5====================-->
+                        <!--==================== PENDIDIKAN 6====================-->
                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">SDIT Daarul Mukmin</h3>
@@ -419,7 +419,7 @@
 
                         <div>
                             <h3 class="contact__title">Email</h3>
-                            <span class="contact__subtitle">gilangt812@gmail.com</span>
+                            <a href="mailto:gilangt812@gmail.com">gilangt812@gmail.com</a>
                         </div>
                     </div>
 
@@ -428,7 +428,7 @@
 
                         <div>
                             <h3 class="contact__title">Telegram</h3>
-                            <span class="contact__subtitle">@gildasxd</span>
+                            <a href="https://t.me/gildasxd" target="_blank">@gildasxd</a>
                         </div>
                     </div>
                 </div>
