CV Link Changed

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     </p>
 
                     <div class="about__buttons">
-                        <a href="https://drive.google.com/file/d/1oij6nOiokQZvfkcTQ6fmg9e3PAr-L7K-/view?usp=sharing" target="_blank" class="button button--flex">
+                        <a href="https://drive.google.com/file/d/1oij6nOiokQZvfkcTQ6fmg9e3PAr-L7K-/view?usp=drive_link" target="_blank" class="button button--flex">
                             Download CV<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
